--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <h1>DSMovie!</h1>
+    <header>
+      <nav class="container">
+        <h1>DS Movie</h1>
+        <a href="https://github.com/caiovic">/caiovic</a>
+      </nav>
+    </header>
   </body>
 </html>
