--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
   <body>
     <header>
       <nav class="container">
-        <h1>DS Movie</h1>
-        <a href="https://github.com/caiovic">/caiovic</a>
+        <h1>DSMovie</h1>
+        <div class="dsmovie-github-link">
+          <img src="img/Vector.svg" alt="Logo github" />
+          <a href="https://github.com/caiovic" target="_blank">/caiovic</a>
+        </div>
       </nav>
     </header>
   </body>
