--- a/index.html
+++ b/index.html
@@ -23,5 +23,19 @@
         </div>
       </nav>
     </header>
+    <main>
+      <section id="dsmovie-card-list" class="container">
+        <div class="dsmovie-card">
+          <img
+            src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/vwBa7djy1oxfxUjc7YtVgGNsjrT.jpg"
+            alt="Hows Castle"
+          />
+          <div class="dsmovie-card-description">
+            <h3>Castelo Animado</h3>
+            <a class="dsmovie-button" href="form.html">Avaliar</a>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
