Listagem de cards

--- a/index.html
+++ b/index.html
@@ -25,14 +25,161 @@
     </header>
     <main>
       <section id="dsmovie-card-list" class="container">
-        <div class="dsmovie-card">
-          <img
-            src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/vwBa7djy1oxfxUjc7YtVgGNsjrT.jpg"
-            alt="Hows Castle"
-          />
-          <div class="dsmovie-card-description">
-            <h3>Castelo Animado</h3>
-            <a class="dsmovie-button" href="form.html">Avaliar</a>
+        <div class="row">
+          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+            <div class="dsmovie-card">
+              <img
+                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/vwBa7djy1oxfxUjc7YtVgGNsjrT.jpg"
+                alt="Hows Castle"
+              />
+              <div class="dsmovie-card-description">
+                <h3>Castelo Animado</h3>
+                <a class="dsmovie-button" href="form.html">Avaliar</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+            <div class="dsmovie-card">
+              <img
+                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/vwBa7djy1oxfxUjc7YtVgGNsjrT.jpg"
+                alt="Hows Castle"
+              />
+              <div class="dsmovie-card-description">
+                <h3>Castelo Animado</h3>
+                <a class="dsmovie-button" href="form.html">Avaliar</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+            <div class="dsmovie-card">
+              <img
+                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/vwBa7djy1oxfxUjc7YtVgGNsjrT.jpg"
+                alt="Hows Castle"
+              />
+              <div class="dsmovie-card-description">
+                <h3>Castelo Animado</h3>
+                <a class="dsmovie-button" href="form.html">Avaliar</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+            <div class="dsmovie-card">
+              <img
+                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/vwBa7djy1oxfxUjc7YtVgGNsjrT.jpg"
+                alt="Hows Castle"
+              />
+              <div class="dsmovie-card-description">
+                <h3>Castelo Animado</h3>
+                <a class="dsmovie-button" href="form.html">Avaliar</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+            <div class="dsmovie-card">
+              <img
+                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/vwBa7djy1oxfxUjc7YtVgGNsjrT.jpg"
+                alt="Hows Castle"
+              />
+              <div class="dsmovie-card-description">
+                <h3>Castelo Animado</h3>
+                <a class="dsmovie-button" href="form.html">Avaliar</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+            <div class="dsmovie-card">
+              <img
+                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/vwBa7djy1oxfxUjc7YtVgGNsjrT.jpg"
+                alt="Hows Castle"
+              />
+              <div class="dsmovie-card-description">
+                <h3>Castelo Animado</h3>
+                <a class="dsmovie-button" href="form.html">Avaliar</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+            <div class="dsmovie-card">
+              <img
+                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/vwBa7djy1oxfxUjc7YtVgGNsjrT.jpg"
+                alt="Hows Castle"
+              />
+              <div class="dsmovie-card-description">
+                <h3>Castelo Animado</h3>
+                <a class="dsmovie-button" href="form.html">Avaliar</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+            <div class="dsmovie-card">
+              <img
+                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/vwBa7djy1oxfxUjc7YtVgGNsjrT.jpg"
+                alt="Hows Castle"
+              />
+              <div class="dsmovie-card-description">
+                <h3>Castelo Animado</h3>
+                <a class="dsmovie-button" href="form.html">Avaliar</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+            <div class="dsmovie-card">
+              <img
+                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/vwBa7djy1oxfxUjc7YtVgGNsjrT.jpg"
+                alt="Hows Castle"
+              />
+              <div class="dsmovie-card-description">
+                <h3>Castelo Animado</h3>
+                <a class="dsmovie-button" href="form.html">Avaliar</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+            <div class="dsmovie-card">
+              <img
+                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/vwBa7djy1oxfxUjc7YtVgGNsjrT.jpg"
+                alt="Hows Castle"
+              />
+              <div class="dsmovie-card-description">
+                <h3>Castelo Animado</h3>
+                <a class="dsmovie-button" href="form.html">Avaliar</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+            <div class="dsmovie-card">
+              <img
+                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/vwBa7djy1oxfxUjc7YtVgGNsjrT.jpg"
+                alt="Hows Castle"
+              />
+              <div class="dsmovie-card-description">
+                <h3>Castelo Animado</h3>
+                <a class="dsmovie-button" href="form.html">Avaliar</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+            <div class="dsmovie-card">
+              <img
+                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/vwBa7djy1oxfxUjc7YtVgGNsjrT.jpg"
+                alt="Hows Castle"
+              />
+              <div class="dsmovie-card-description">
+                <h3>Castelo Animado</h3>
+                <a class="dsmovie-button" href="form.html">Avaliar</a>
+              </div>
+            </div>
           </div>
         </div>
       </section>
