Listagem de Cards

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 alt="Hows Castle"
               />
               <div class="dsmovie-card-description">
-                <h3>Castelo Animado</h3>
+                <h3>Castelo Animado (2004)</h3>
                 <a class="dsmovie-button" href="form.html">Avaliar</a>
               </div>
             </div>
@@ -42,11 +42,11 @@
           <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
             <div class="dsmovie-card">
               <img
-                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/vwBa7djy1oxfxUjc7YtVgGNsjrT.jpg"
-                alt="Hows Castle"
+                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/hZth9NCeXvvO7Xi98d8q34e1Ier.jpg"
+                alt="Spirited Away"
               />
               <div class="dsmovie-card-description">
-                <h3>Castelo Animado</h3>
+                <h3>As Viagens de Chihiro (2001)</h3>
                 <a class="dsmovie-button" href="form.html">Avaliar</a>
               </div>
             </div>
@@ -55,11 +55,11 @@
           <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
             <div class="dsmovie-card">
               <img
-                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/vwBa7djy1oxfxUjc7YtVgGNsjrT.jpg"
-                alt="Hows Castle"
+                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/rr7E0NoGKxvbkb89eR1GwfoYjpA.jpg"
+                alt="Fight Club"
               />
               <div class="dsmovie-card-description">
-                <h3>Castelo Animado</h3>
+                <h3>Clube da Luta (1999)</h3>
                 <a class="dsmovie-button" href="form.html">Avaliar</a>
               </div>
             </div>
@@ -68,11 +68,11 @@
           <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
             <div class="dsmovie-card">
               <img
-                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/vwBa7djy1oxfxUjc7YtVgGNsjrT.jpg"
-                alt="Hows Castle"
+                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/x4lxFIhhrDI4nWtV8osnYwbGESV.jpg"
+                alt="Modern Family"
               />
               <div class="dsmovie-card-description">
-                <h3>Castelo Animado</h3>
+                <h3>Modern Family (2009)</h3>
                 <a class="dsmovie-button" href="form.html">Avaliar</a>
               </div>
             </div>
@@ -81,11 +81,11 @@
           <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
             <div class="dsmovie-card">
               <img
-                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/vwBa7djy1oxfxUjc7YtVgGNsjrT.jpg"
-                alt="Hows Castle"
+                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jmlM5sa8vrBWHSBubqAithX6Fx5.jpg"
+                alt="akira"
               />
               <div class="dsmovie-card-description">
-                <h3>Castelo Animado</h3>
+                <h3>Akira (1988)</h3>
                 <a class="dsmovie-button" href="form.html">Avaliar</a>
               </div>
             </div>
@@ -94,11 +94,11 @@
           <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
             <div class="dsmovie-card">
               <img
-                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/vwBa7djy1oxfxUjc7YtVgGNsjrT.jpg"
-                alt="Hows Castle"
+                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/ycyqwYnKNtaUqymzHdLRMCeiBDO.jpg"
+                alt="Scott Pilgrim"
               />
               <div class="dsmovie-card-description">
-                <h3>Castelo Animado</h3>
+                <h3>Scott Pilgrim Contra o Mundo (2010)</h3>
                 <a class="dsmovie-button" href="form.html">Avaliar</a>
               </div>
             </div>
@@ -107,11 +107,11 @@
           <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
             <div class="dsmovie-card">
               <img
-                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/vwBa7djy1oxfxUjc7YtVgGNsjrT.jpg"
-                alt="Hows Castle"
+                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/aoL6L4PCn89MHTVyMnmjwBFLmWX.jpg"
+                alt="butterfly effect"
               />
               <div class="dsmovie-card-description">
-                <h3>Castelo Animado</h3>
+                <h3>Efeito Borboleta (2004)</h3>
                 <a class="dsmovie-button" href="form.html">Avaliar</a>
               </div>
             </div>
@@ -120,11 +120,11 @@
           <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
             <div class="dsmovie-card">
               <img
-                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/vwBa7djy1oxfxUjc7YtVgGNsjrT.jpg"
-                alt="Hows Castle"
+                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/AdKA2F1SzYPhSZdEbjH1Zh75UVQ.jpg"
+                alt="the shining"
               />
               <div class="dsmovie-card-description">
-                <h3>Castelo Animado</h3>
+                <h3>O iluminado (1980)</h3>
                 <a class="dsmovie-button" href="form.html">Avaliar</a>
               </div>
             </div>
@@ -133,11 +133,11 @@
           <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
             <div class="dsmovie-card">
               <img
-                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/vwBa7djy1oxfxUjc7YtVgGNsjrT.jpg"
-                alt="Hows Castle"
+                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/zmVq7y63z8NewluK7MUBfTxuyvD.jpg"
+                alt="Ferris Bueller days off"
               />
               <div class="dsmovie-card-description">
-                <h3>Castelo Animado</h3>
+                <h3>Curtindo a Vida Adoidado (1986)</h3>
                 <a class="dsmovie-button" href="form.html">Avaliar</a>
               </div>
             </div>
@@ -146,11 +146,11 @@
           <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
             <div class="dsmovie-card">
               <img
-                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/vwBa7djy1oxfxUjc7YtVgGNsjrT.jpg"
-                alt="Hows Castle"
+                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/l0qVZIpXtIo7km9u5Yqh0nKPOr5.jpg"
+                alt="Friends"
               />
               <div class="dsmovie-card-description">
-                <h3>Castelo Animado</h3>
+                <h3>Friends (1994)</h3>
                 <a class="dsmovie-button" href="form.html">Avaliar</a>
               </div>
             </div>
@@ -159,11 +159,11 @@
           <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
             <div class="dsmovie-card">
               <img
-                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/vwBa7djy1oxfxUjc7YtVgGNsjrT.jpg"
-                alt="Hows Castle"
+                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/a6ptrTUH1c5OdWanjyYtAkOuYD0.jpg"
+                alt="One Piece"
               />
               <div class="dsmovie-card-description">
-                <h3>Castelo Animado</h3>
+                <h3>One Piece (1999)</h3>
                 <a class="dsmovie-button" href="form.html">Avaliar</a>
               </div>
             </div>
@@ -172,11 +172,11 @@
           <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
             <div class="dsmovie-card">
               <img
-                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/vwBa7djy1oxfxUjc7YtVgGNsjrT.jpg"
-                alt="Hows Castle"
+                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/9mjYukNR5dD54rYziqoDK9XQjS2.jpg"
+                alt="Little Fish"
               />
               <div class="dsmovie-card-description">
-                <h3>Castelo Animado</h3>
+                <h3>Little Fish</h3>
                 <a class="dsmovie-button" href="form.html">Avaliar</a>
               </div>
             </div>
