--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <!--      --MENU--      -->
+
     <header>
       <nav class="container">
         <h1>DSMovie</h1>
@@ -23,6 +25,11 @@
         </div>
       </nav>
     </header>
+
+    <!--      --lEYOUT--       -->
+
+    <!--CARD-->
+
     <main>
       <section id="dsmovie-card-list" class="container">
         <div class="row">
@@ -39,6 +46,8 @@
             </div>
           </div>
 
+          <!--CARD-->
+
           <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
             <div class="dsmovie-card">
               <img
@@ -51,6 +60,8 @@
               </div>
             </div>
           </div>
+
+          <!--CARD-->
 
           <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
             <div class="dsmovie-card">
@@ -65,6 +76,8 @@
             </div>
           </div>
 
+          <!--CARD-->
+
           <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
             <div class="dsmovie-card">
               <img
@@ -77,6 +90,8 @@
               </div>
             </div>
           </div>
+
+          <!--CARD-->
 
           <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
             <div class="dsmovie-card">
@@ -91,6 +106,8 @@
             </div>
           </div>
 
+          <!--CARD-->
+
           <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
             <div class="dsmovie-card">
               <img
@@ -103,6 +120,8 @@
               </div>
             </div>
           </div>
+
+          <!--CARD-->
 
           <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
             <div class="dsmovie-card">
@@ -117,6 +136,8 @@
             </div>
           </div>
 
+          <!--CARD-->
+
           <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
             <div class="dsmovie-card">
               <img
@@ -129,6 +150,8 @@
               </div>
             </div>
           </div>
+
+          <!--CARD-->
 
           <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
             <div class="dsmovie-card">
@@ -143,6 +166,8 @@
             </div>
           </div>
 
+          <!--CARD-->
+
           <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
             <div class="dsmovie-card">
               <img
@@ -156,6 +181,8 @@
             </div>
           </div>
 
+          <!--CARD-->
+
           <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
             <div class="dsmovie-card">
               <img
@@ -168,6 +195,8 @@
               </div>
             </div>
           </div>
+
+          <!--CARD-->
 
           <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
             <div class="dsmovie-card">
