--- a/form.html
+++ b/form.html
@@ -39,9 +39,31 @@
                 src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/vwBa7djy1oxfxUjc7YtVgGNsjrT.jpg"
                 alt="Hows Castle"
               />
-              <div class="dsmovie-card-description">
+              <div class="dsmovie-form-description">
                 <h3>Castelo Animado (2004)</h3>
-                <a class="dsmovie-button" href="index.html">Cancelar</a>
+
+                <!--      --FORM--      -->
+
+                <form class="dsmovie-form">
+                  <div class="form-group dsmovie-form-group">
+                    <label for="email">Insira seu e-mail</label>
+                    <input class="form-control" type="email" id="email" />
+                  </div>
+                  <div class="form-group dsmovie-form-group">
+                    <label for="score">Informar sua avaliação</label>
+                    <select class="form-control" name="score" id="score">
+                      <option value="rate1">1</option>
+                      <option value="rate2">2</option>
+                      <option value="rate3">3</option>
+                      <option value="rate4">4</option>
+                      <option value="rate5">5</option>
+                    </select>
+                  </div>
+                  <div class="dsmovie-form-btn-container">
+                    <button class="dsmovie-button" type="submit">Salvar</button>
+                    <a class="dsmovie-button" href="index.html">Cancelar</a>
+                  </div>
+                </form>
               </div>
             </div>
           </div>
