Avaliação com estrelas

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <nav class="container">
         <h1>DSMovie</h1>
         <div class="dsmovie-github-link">
-          <img src="img/Vector.svg" alt="Logo github" />
+          <img src="img/github-logo.svg" alt="Logo github" />
           <a href="https://github.com/caiovic" target="_blank">/caiovic</a>
         </div>
       </nav>
@@ -41,7 +41,18 @@
               />
               <div class="dsmovie-card-description">
                 <h3>Castelo Animado (2004)</h3>
-                <a class="dsmovie-button" href="form.html">Avaliar</a>
+                <div class="dsmovie-card-description-bottom">
+                  <h4>4.5</h4>
+                  <div>
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/half-star.svg" alt="star" />
+                  </div>
+                  <p>150 avaliações</p>
+                  <a class="dsmovie-button" href="form.html">Avaliar</a>
+                </div>
               </div>
             </div>
           </div>
