--- a/index.html
+++ b/index.html
@@ -67,7 +67,18 @@
               />
               <div class="dsmovie-card-description">
                 <h3>As Viagens de Chihiro (2001)</h3>
-                <a class="dsmovie-button" href="form.html">Avaliar</a>
+                <div class="dsmovie-card-description-bottom">
+                  <h4>4.5</h4>
+                  <div>
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/half-star.svg" alt="star" />
+                  </div>
+                  <p>150 avaliações</p>
+                  <a class="dsmovie-button" href="form.html">Avaliar</a>
+                </div>
               </div>
             </div>
           </div>
@@ -82,7 +93,18 @@
               />
               <div class="dsmovie-card-description">
                 <h3>Clube da Luta (1999)</h3>
-                <a class="dsmovie-button" href="form.html">Avaliar</a>
+                <div class="dsmovie-card-description-bottom">
+                  <h4>4.5</h4>
+                  <div>
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/half-star.svg" alt="star" />
+                  </div>
+                  <p>150 avaliações</p>
+                  <a class="dsmovie-button" href="form.html">Avaliar</a>
+                </div>
               </div>
             </div>
           </div>
@@ -97,7 +119,18 @@
               />
               <div class="dsmovie-card-description">
                 <h3>Modern Family (2009)</h3>
-                <a class="dsmovie-button" href="form.html">Avaliar</a>
+                <div class="dsmovie-card-description-bottom">
+                  <h4>4.5</h4>
+                  <div>
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/half-star.svg" alt="star" />
+                  </div>
+                  <p>150 avaliações</p>
+                  <a class="dsmovie-button" href="form.html">Avaliar</a>
+                </div>
               </div>
             </div>
           </div>
@@ -112,7 +145,18 @@
               />
               <div class="dsmovie-card-description">
                 <h3>Akira (1988)</h3>
-                <a class="dsmovie-button" href="form.html">Avaliar</a>
+                <div class="dsmovie-card-description-bottom">
+                  <h4>4.5</h4>
+                  <div>
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/half-star.svg" alt="star" />
+                  </div>
+                  <p>150 avaliações</p>
+                  <a class="dsmovie-button" href="form.html">Avaliar</a>
+                </div>
               </div>
             </div>
           </div>
@@ -127,7 +171,18 @@
               />
               <div class="dsmovie-card-description">
                 <h3>Scott Pilgrim Contra o Mundo (2010)</h3>
-                <a class="dsmovie-button" href="form.html">Avaliar</a>
+                <div class="dsmovie-card-description-bottom">
+                  <h4>4.5</h4>
+                  <div>
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/half-star.svg" alt="star" />
+                  </div>
+                  <p>150 avaliações</p>
+                  <a class="dsmovie-button" href="form.html">Avaliar</a>
+                </div>
               </div>
             </div>
           </div>
@@ -142,7 +197,18 @@
               />
               <div class="dsmovie-card-description">
                 <h3>Efeito Borboleta (2004)</h3>
-                <a class="dsmovie-button" href="form.html">Avaliar</a>
+                <div class="dsmovie-card-description-bottom">
+                  <h4>4.5</h4>
+                  <div>
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/half-star.svg" alt="star" />
+                  </div>
+                  <p>150 avaliações</p>
+                  <a class="dsmovie-button" href="form.html">Avaliar</a>
+                </div>
               </div>
             </div>
           </div>
@@ -157,7 +223,18 @@
               />
               <div class="dsmovie-card-description">
                 <h3>O iluminado (1980)</h3>
-                <a class="dsmovie-button" href="form.html">Avaliar</a>
+                <div class="dsmovie-card-description-bottom">
+                  <h4>4.5</h4>
+                  <div>
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/half-star.svg" alt="star" />
+                  </div>
+                  <p>150 avaliações</p>
+                  <a class="dsmovie-button" href="form.html">Avaliar</a>
+                </div>
               </div>
             </div>
           </div>
@@ -172,7 +249,18 @@
               />
               <div class="dsmovie-card-description">
                 <h3>Curtindo a Vida Adoidado (1986)</h3>
-                <a class="dsmovie-button" href="form.html">Avaliar</a>
+                <div class="dsmovie-card-description-bottom">
+                  <h4>4.5</h4>
+                  <div>
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/half-star.svg" alt="star" />
+                  </div>
+                  <p>150 avaliações</p>
+                  <a class="dsmovie-button" href="form.html">Avaliar</a>
+                </div>
               </div>
             </div>
           </div>
@@ -187,7 +275,18 @@
               />
               <div class="dsmovie-card-description">
                 <h3>Friends (1994)</h3>
-                <a class="dsmovie-button" href="form.html">Avaliar</a>
+                <div class="dsmovie-card-description-bottom">
+                  <h4>4.5</h4>
+                  <div>
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/half-star.svg" alt="star" />
+                  </div>
+                  <p>150 avaliações</p>
+                  <a class="dsmovie-button" href="form.html">Avaliar</a>
+                </div>
               </div>
             </div>
           </div>
@@ -202,7 +301,18 @@
               />
               <div class="dsmovie-card-description">
                 <h3>One Piece (1999)</h3>
-                <a class="dsmovie-button" href="form.html">Avaliar</a>
+                <div class="dsmovie-card-description-bottom">
+                  <h4>4.5</h4>
+                  <div>
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/half-star.svg" alt="star" />
+                  </div>
+                  <p>150 avaliações</p>
+                  <a class="dsmovie-button" href="form.html">Avaliar</a>
+                </div>
               </div>
             </div>
           </div>
@@ -217,7 +327,18 @@
               />
               <div class="dsmovie-card-description">
                 <h3>Little Fish</h3>
-                <a class="dsmovie-button" href="form.html">Avaliar</a>
+                <div class="dsmovie-card-description-bottom">
+                  <h4>4.5</h4>
+                  <div>
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/star-full.svg" alt="star" />
+                    <img src="img/half-star.svg" alt="star" />
+                  </div>
+                  <p>150 avaliações</p>
+                  <a class="dsmovie-button" href="form.html">Avaliar</a>
+                </div>
               </div>
             </div>
           </div>
