Mudando a descrição dos cards

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <div class="dsmovie-card-description">
                 <h3>As Viagens de Chihiro (2001)</h3>
                 <div class="dsmovie-card-description-bottom">
-                  <h4>4.5</h4>
+                  <h4>4.7</h4>
                   <div>
                     <img src="img/star-full.svg" alt="star" />
                     <img src="img/star-full.svg" alt="star" />
@@ -76,7 +76,7 @@
                     <img src="img/star-full.svg" alt="star" />
                     <img src="img/half-star.svg" alt="star" />
                   </div>
-                  <p>150 avaliações</p>
+                  <p>240 avaliações</p>
                   <a class="dsmovie-button" href="form.html">Avaliar</a>
                 </div>
               </div>
@@ -94,15 +94,15 @@
               <div class="dsmovie-card-description">
                 <h3>Clube da Luta (1999)</h3>
                 <div class="dsmovie-card-description-bottom">
-                  <h4>4.5</h4>
+                  <h4>4.0</h4>
                   <div>
                     <img src="img/star-full.svg" alt="star" />
                     <img src="img/star-full.svg" alt="star" />
                     <img src="img/star-full.svg" alt="star" />
                     <img src="img/star-full.svg" alt="star" />
-                    <img src="img/half-star.svg" alt="star" />
+                    <img src="img/empty-star.svg" alt="star" />
                   </div>
-                  <p>150 avaliações</p>
+                  <p>100 avaliações</p>
                   <a class="dsmovie-button" href="form.html">Avaliar</a>
                 </div>
               </div>
@@ -120,15 +120,15 @@
               <div class="dsmovie-card-description">
                 <h3>Modern Family (2009)</h3>
                 <div class="dsmovie-card-description-bottom">
-                  <h4>4.5</h4>
+                  <h4>3.9</h4>
                   <div>
                     <img src="img/star-full.svg" alt="star" />
                     <img src="img/star-full.svg" alt="star" />
                     <img src="img/star-full.svg" alt="star" />
                     <img src="img/star-full.svg" alt="star" />
-                    <img src="img/half-star.svg" alt="star" />
+                    <img src="img/empty-star.svg" alt="star" />
                   </div>
-                  <p>150 avaliações</p>
+                  <p>57 avaliações</p>
                   <a class="dsmovie-button" href="form.html">Avaliar</a>
                 </div>
               </div>
@@ -146,15 +146,15 @@
               <div class="dsmovie-card-description">
                 <h3>Akira (1988)</h3>
                 <div class="dsmovie-card-description-bottom">
-                  <h4>4.5</h4>
+                  <h4>4.0</h4>
                   <div>
                     <img src="img/star-full.svg" alt="star" />
                     <img src="img/star-full.svg" alt="star" />
                     <img src="img/star-full.svg" alt="star" />
                     <img src="img/star-full.svg" alt="star" />
-                    <img src="img/half-star.svg" alt="star" />
+                    <img src="img/empty-star.svg" alt="star" />
                   </div>
-                  <p>150 avaliações</p>
+                  <p>110 avaliações</p>
                   <a class="dsmovie-button" href="form.html">Avaliar</a>
                 </div>
               </div>
@@ -172,13 +172,13 @@
               <div class="dsmovie-card-description">
                 <h3>Scott Pilgrim Contra o Mundo (2010)</h3>
                 <div class="dsmovie-card-description-bottom">
-                  <h4>4.5</h4>
+                  <h4>3.5</h4>
                   <div>
                     <img src="img/star-full.svg" alt="star" />
                     <img src="img/star-full.svg" alt="star" />
                     <img src="img/star-full.svg" alt="star" />
-                    <img src="img/star-full.svg" alt="star" />
                     <img src="img/half-star.svg" alt="star" />
+                    <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>150 avaliações</p>
                   <a class="dsmovie-button" href="form.html">Avaliar</a>
@@ -198,15 +198,15 @@
               <div class="dsmovie-card-description">
                 <h3>Efeito Borboleta (2004)</h3>
                 <div class="dsmovie-card-description-bottom">
-                  <h4>4.5</h4>
+                  <h4>4.0</h4>
                   <div>
                     <img src="img/star-full.svg" alt="star" />
                     <img src="img/star-full.svg" alt="star" />
                     <img src="img/star-full.svg" alt="star" />
-                    <img src="img/star-full.svg" alt="star" />
-                    <img src="img/half-star.svg" alt="star" />
+                    <img src="img/empty-star.svg" alt="star" />
+                    <img src="img/empty-star.svg" alt="star" />
                   </div>
-                  <p>150 avaliações</p>
+                  <p>49 avaliações</p>
                   <a class="dsmovie-button" href="form.html">Avaliar</a>
                 </div>
               </div>
@@ -224,15 +224,15 @@
               <div class="dsmovie-card-description">
                 <h3>O iluminado (1980)</h3>
                 <div class="dsmovie-card-description-bottom">
-                  <h4>4.5</h4>
+                  <h4>4.0</h4>
                   <div>
                     <img src="img/star-full.svg" alt="star" />
                     <img src="img/star-full.svg" alt="star" />
                     <img src="img/star-full.svg" alt="star" />
                     <img src="img/star-full.svg" alt="star" />
-                    <img src="img/half-star.svg" alt="star" />
+                    <img src="img/empty-star.svg" alt="star" />
                   </div>
-                  <p>150 avaliações</p>
+                  <p>300 avaliações</p>
                   <a class="dsmovie-button" href="form.html">Avaliar</a>
                 </div>
               </div>
@@ -250,7 +250,7 @@
               <div class="dsmovie-card-description">
                 <h3>Curtindo a Vida Adoidado (1986)</h3>
                 <div class="dsmovie-card-description-bottom">
-                  <h4>4.5</h4>
+                  <h4>4.2</h4>
                   <div>
                     <img src="img/star-full.svg" alt="star" />
                     <img src="img/star-full.svg" alt="star" />
@@ -258,7 +258,7 @@
                     <img src="img/star-full.svg" alt="star" />
                     <img src="img/half-star.svg" alt="star" />
                   </div>
-                  <p>150 avaliações</p>
+                  <p>172 avaliações</p>
                   <a class="dsmovie-button" href="form.html">Avaliar</a>
                 </div>
               </div>
@@ -284,7 +284,7 @@
                     <img src="img/star-full.svg" alt="star" />
                     <img src="img/half-star.svg" alt="star" />
                   </div>
-                  <p>150 avaliações</p>
+                  <p>412 avaliações</p>
                   <a class="dsmovie-button" href="form.html">Avaliar</a>
                 </div>
               </div>
@@ -302,7 +302,7 @@
               <div class="dsmovie-card-description">
                 <h3>One Piece (1999)</h3>
                 <div class="dsmovie-card-description-bottom">
-                  <h4>4.5</h4>
+                  <h4>4.9</h4>
                   <div>
                     <img src="img/star-full.svg" alt="star" />
                     <img src="img/star-full.svg" alt="star" />
@@ -310,7 +310,7 @@
                     <img src="img/star-full.svg" alt="star" />
                     <img src="img/half-star.svg" alt="star" />
                   </div>
-                  <p>150 avaliações</p>
+                  <p>146 avaliações</p>
                   <a class="dsmovie-button" href="form.html">Avaliar</a>
                 </div>
               </div>
@@ -328,15 +328,15 @@
               <div class="dsmovie-card-description">
                 <h3>Little Fish</h3>
                 <div class="dsmovie-card-description-bottom">
-                  <h4>4.5</h4>
+                  <h4>3.6</h4>
                   <div>
                     <img src="img/star-full.svg" alt="star" />
                     <img src="img/star-full.svg" alt="star" />
                     <img src="img/star-full.svg" alt="star" />
-                    <img src="img/star-full.svg" alt="star" />
                     <img src="img/half-star.svg" alt="star" />
+                    <img src="img/empty-star.svg" alt="star" />
                   </div>
-                  <p>150 avaliações</p>
+                  <p>78 avaliações</p>
                   <a class="dsmovie-button" href="form.html">Avaliar</a>
                 </div>
               </div>
