--- a/index.html
+++ b/index.html
@@ -32,6 +32,22 @@
 
     <main>
       <section id="dsmovie-card-list" class="container">
+        <div class="dsmovie-pagination-container">
+          <div class="dsmovie-pagination-box">
+            <button disabled>
+              <img src="./img/arrow.svg" alt="voltar página" />
+            </button>
+            <p>1 de 23</p>
+            <button>
+              <img
+                class="dsmovie-flip-horizontal"
+                src="./img/arrow.svg"
+                alt="avançar página"
+              />
+            </button>
+          </div>
+        </div>
+
         <div class="row">
           <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
             <div class="dsmovie-card">
