--- a/forms/form_11.html
+++ b/forms/form_11.html
@@ -11,7 +11,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
     <!--      --MENU--      -->
@@ -20,7 +20,7 @@
       <nav class="container">
         <h1>DSMovie</h1>
         <div class="dsmovie-github-link">
-          <img src="img/github-logo.svg" alt="Logo github" />
+          <img src="/img/github-logo.svg" alt="Logo github" />
           <a href="https://github.com/caiovic" target="_blank">/caiovic</a>
         </div>
       </nav>
@@ -36,18 +36,23 @@
           <div>
             <div class="dsmovie-card">
               <img
-                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/vwBa7djy1oxfxUjc7YtVgGNsjrT.jpg"
-                alt="Hows Castle"
+                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/a6ptrTUH1c5OdWanjyYtAkOuYD0.jpg"
+                alt="One Piece"
               />
               <div class="dsmovie-form-description">
-                <h3>Castelo Animado (2004)</h3>
+                <h3>One Piece (1999)</h3>
 
                 <!--      --FORM--      -->
 
                 <form class="dsmovie-form">
                   <div class="form-group dsmovie-form-group">
                     <label for="email">Insira seu e-mail</label>
-                    <input class="form-control" type="email" id="email" />
+                    <input
+                      class="form-control"
+                      type="email"
+                      id="email"
+                      placeholder="email@exemplo.com"
+                    />
                   </div>
                   <div class="form-group dsmovie-form-group">
                     <label for="score">Informar sua avaliação</label>
@@ -60,8 +65,12 @@
                     </select>
                   </div>
                   <div class="dsmovie-form-btn-container">
-                    <button class="dsmovie-button" type="submit">Salvar</button>
-                    <a class="dsmovie-button" href="index.html">Cancelar</a>
+                    <button class="dsmovie-button" type="submit">
+                      <a class="dsmovie-button" href="../feedback.html"
+                        >Salvar</a
+                      >
+                    </button>
+                    <a class="dsmovie-button" href="../index.html">Cancelar</a>
                   </div>
                 </form>
               </div>
