Versão final (Correção de erro)

--- a/index.html
+++ b/index.html
@@ -97,9 +97,7 @@
                     <img src="img/half-star.svg" alt="star" />
                   </div>
                   <p>240 avaliações</p>
-                  <a class="dsmovie-button" href="/forms/form_2.html"
-                    >Avaliar</a
-                  >
+                  <a class="dsmovie-button" href="forms/form_1.html">Avaliar</a>
                 </div>
               </div>
             </div>
@@ -125,9 +123,7 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>100 avaliações</p>
-                  <a class="dsmovie-button" href="/forms/form_3.html"
-                    >Avaliar</a
-                  >
+                  <a class="dsmovie-button" href="forms/form_3.html">Avaliar</a>
                 </div>
               </div>
             </div>
@@ -153,9 +149,7 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>57 avaliações</p>
-                  <a class="dsmovie-button" href="/forms/form_4.html"
-                    >Avaliar</a
-                  >
+                  <a class="dsmovie-button" href="forms/form_4.html">Avaliar</a>
                 </div>
               </div>
             </div>
@@ -181,9 +175,7 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>110 avaliações</p>
-                  <a class="dsmovie-button" href="/forms/form_5.html"
-                    >Avaliar</a
-                  >
+                  <a class="dsmovie-button" href="forms/form_5.html">Avaliar</a>
                 </div>
               </div>
             </div>
@@ -209,9 +201,7 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>150 avaliações</p>
-                  <a class="dsmovie-button" href="/forms/form_6.html"
-                    >Avaliar</a
-                  >
+                  <a class="dsmovie-button" href="forms/form_6.html">Avaliar</a>
                 </div>
               </div>
             </div>
@@ -237,9 +227,7 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>49 avaliações</p>
-                  <a class="dsmovie-button" href="/forms/form_7.html"
-                    >Avaliar</a
-                  >
+                  <a class="dsmovie-button" href="forms/form_7.html">Avaliar</a>
                 </div>
               </div>
             </div>
@@ -265,9 +253,7 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>300 avaliações</p>
-                  <a class="dsmovie-button" href="/forms/form_8.html"
-                    >Avaliar</a
-                  >
+                  <a class="dsmovie-button" href="forms/form_8.html">Avaliar</a>
                 </div>
               </div>
             </div>
@@ -293,9 +279,7 @@
                     <img src="img/half-star.svg" alt="star" />
                   </div>
                   <p>172 avaliações</p>
-                  <a class="dsmovie-button" href="/forms/form_9.html"
-                    >Avaliar</a
-                  >
+                  <a class="dsmovie-button" href="forms/form_9.html">Avaliar</a>
                 </div>
               </div>
             </div>
@@ -321,7 +305,7 @@
                     <img src="img/half-star.svg" alt="star" />
                   </div>
                   <p>412 avaliações</p>
-                  <a class="dsmovie-button" href="/forms/form_10.html"
+                  <a class="dsmovie-button" href="forms/form_10.html"
                     >Avaliar</a
                   >
                 </div>
@@ -349,7 +333,7 @@
                     <img src="img/half-star.svg" alt="star" />
                   </div>
                   <p>146 avaliações</p>
-                  <a class="dsmovie-button" href="/forms/form_11.html"
+                  <a class="dsmovie-button" href="forms/form_11.html"
                     >Avaliar</a
                   >
                 </div>
@@ -377,7 +361,7 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>78 avaliações</p>
-                  <a class="dsmovie-button" href="/forms/form_12.html"
+                  <a class="dsmovie-button" href="forms/form_12.html"
                     >Avaliar</a
                   >
                 </div>
