--- a/page_2.html
+++ b/page_2.html
@@ -71,7 +71,7 @@
                     <img src="img/half-star.svg" alt="star" />
                   </div>
                   <p>708 avaliações</p>
-                  <a class="dsmovie-button" href="/forms/form_13.html"
+                  <a class="dsmovie-button" href="forms/form_13.html"
                     >Avaliar</a
                   >
                 </div>
@@ -99,7 +99,7 @@
                     <img src="img/half-star.svg" alt="star" />
                   </div>
                   <p>200 avaliações</p>
-                  <a class="dsmovie-button" href="/forms/form_14.html"
+                  <a class="dsmovie-button" href="forms/form_14.html"
                     >Avaliar</a
                   >
                 </div>
@@ -127,7 +127,7 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>74 avaliações</p>
-                  <a class="dsmovie-button" href="/forms/form_15.html"
+                  <a class="dsmovie-button" href="forms/form_15.html"
                     >Avaliar</a
                   >
                 </div>
@@ -155,7 +155,7 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>460 avaliações</p>
-                  <a class="dsmovie-button" href="/forms/form_16.html"
+                  <a class="dsmovie-button" href="forms/form_16.html"
                     >Avaliar</a
                   >
                 </div>
@@ -183,7 +183,7 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>17 avaliações</p>
-                  <a class="dsmovie-button" href="/forms/form_17.html"
+                  <a class="dsmovie-button" href="forms/form_17.html"
                     >Avaliar</a
                   >
                 </div>
@@ -211,7 +211,7 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>150 avaliações</p>
-                  <a class="dsmovie-button" href="/forms/form_18.html"
+                  <a class="dsmovie-button" href="forms/form_18.html"
                     >Avaliar</a
                   >
                 </div>
@@ -239,7 +239,7 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>100 avaliações</p>
-                  <a class="dsmovie-button" href="/forms/form_19.html"
+                  <a class="dsmovie-button" href="forms/form_19.html"
                     >Avaliar</a
                   >
                 </div>
@@ -267,7 +267,7 @@
                     <img src="img/half-star.svg" alt="star" />
                   </div>
                   <p>302 avaliações</p>
-                  <a class="dsmovie-button" href="/forms/form_20.html"
+                  <a class="dsmovie-button" href="forms/form_20.html"
                     >Avaliar</a
                   >
                 </div>
@@ -295,7 +295,7 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>80 avaliações</p>
-                  <a class="dsmovie-button" href="/forms/form_21.html"
+                  <a class="dsmovie-button" href="forms/form_21.html"
                     >Avaliar</a
                   >
                 </div>
@@ -323,7 +323,7 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>15 avaliações</p>
-                  <a class="dsmovie-button" href="/forms/form_22.html"
+                  <a class="dsmovie-button" href="forms/form_22.html"
                     >Avaliar</a
                   >
                 </div>
@@ -351,7 +351,7 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>112 avaliações</p>
-                  <a class="dsmovie-button" href="/forms/form_23.html"
+                  <a class="dsmovie-button" href="forms/form_23.html"
                     >Avaliar</a
                   >
                 </div>
@@ -379,7 +379,7 @@
                     <img src="img/empty-star.svg" alt="star" />
                   </div>
                   <p>55 avaliações</p>
-                  <a class="dsmovie-button" href="/forms/form_24.html"
+                  <a class="dsmovie-button" href="forms/form_24.html"
                     >Avaliar</a
                   >
                 </div>
